--- a/Homepage.html
+++ b/Homepage.html
@@ -31,7 +31,7 @@
             <a href = "https://music.163.com/#/artist?id=34779628">网易云</a><br />
         </div>
     </div>
-    <div class = "building">更多内容建设中。。。。。。</div>
+    <div class = "building">（此网页已停止更新，RPeGio正在编写新的主页中。。。）</div>
     
     <!-- <h6>画得B丑的logo:</h6>
     <img src = "logo.jpg" width = "400" height = "400" alt = "啊啊显示不出来了 "/> -->
