--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <br>
     </div>
     <div class = "button">
-        <a href = "Homepage.html">进入首页</a>
+        <a href = "/home/">进入首页</a>
     </div>
 </body>
 </html>
