--- a/static/home/index.html
+++ b/static/home/index.html
@@ -2,7 +2,6 @@
 <html lang = "zh-CN">
 <head>
     <meta charset = "UTF-8">
-    <meta name = "viewport" content = "width = device-width, user-scable = no, initial-scale = 1.0, maximum-scale = 1.0, minimum-scale = 1.0">
     <link rel = "shortcut icon" href = "../../favicon.ico">
     <link rel = "stylesheet" href = "../../css/base.css">
     <link rel = "stylesheet" href = "../../css/homepage.css">
@@ -25,7 +24,7 @@
             <h1 class="">我是谁</h1>
             <div class="tri" style = "border-bottom: 12px solid rgb(197, 224, 255);"></div>
             <div class="txtArea">
-                <p class="codeText" style = "text-indent: 2em;">我是RPeGio，一个普普通通的住校高一生……</p>
+                <p class="codeText" style = "text-indent: 2em;">我是RPeGio，一个普普通通的高二学牲……</p>
             </div><br>
             <a href = "../introduce/" class = " more" id = "js">了解更多</a>
             <hr style = "margin-bottom: 12px; margin-top: 20px;">
@@ -49,6 +48,13 @@
     </div>
     <div class = "footer">
         <div class = "contact">联 系 我</div>
+        <div class = "platform">
+            <span style = "font-family: icomoon;"><a href = "https://twitter.com/RPeGio_Official" class = "contact_a"></a></span>
+            <span style = "font-family: icomoon;"><a href = "https://youtube.com/404.html" class = "contact_a"></a></span>
+            <span style = "font-family: icomoon;"><a href = "https://github.com/RPeGio/" class = "contact_a"></a></span>
+            <span style = "font-family: icomoon;"><a href = "https://soundcloud.com/tslocsqdsfyk" class = "contact_a"></a></span>
+            <span><a href = "https://space.bilibili.com/430187058"><img src = "../../icon/bilibili.png"></a></span>
+        </div>
     </div>
 </body>
 </html>
