--- a/static/js_page/index.html
+++ b/static/js_page/index.html
@@ -2,7 +2,6 @@
 <html lang = "zh-CN">
 <head>
     <meta charset = "UTF-8">
-    <meta name = "viewport" content = "width = device-width, user-scable = no, initial-scale = 1.0, maximum-scale = 1.0, minimum-scale = 1.0">
     <link rel = "shortcut icon" href = "../../favicon.ico">
     <link rel = "stylesheet" href = "../../css/base.css">
     <link rel = "stylesheet" href = "#">
@@ -44,6 +43,7 @@
         </div>
     </div>
     <div class="footer">
+        <div class = "contact">联 系 我</div>
      
     </div>
 </body>
