--- a/static/home/index.html
+++ b/static/home/index.html
@@ -16,7 +16,10 @@
             <h1>更新日志</h1>
             <div class="tri"></div>
             <div class="codeArea">
-                <p class="codeText "><span style = "color: grey; font-weight: 900; font-style: normal;">|</span> v1.0.0 网页初创建<br>--添加了更新日志查看<br>--添加了自我介绍<br>--测试了javascript项目预览<br>&nbsp<span style = "float: right; color: rgba(87, 87, 87, 0.562); background-color: transparent;">2023/06/02</span></p>
+                <p class="codeText "><span style = "color: grey; font-weight: 900; font-style: normal;">|</span>
+                     v1.0.1 <br>--优化移动端体验<br>
+                    &nbsp<span style = "float: right; color: rgba(87, 87, 87, 0.562); background-color: transparent;">2023/08/03</span>
+                </p>
             </div><br>
             <a href = "../update_log/" class = "more">查看全部</a>
             <hr style = "margin-bottom: 12px; margin-top: 20px;" id = "wai">
@@ -32,7 +35,10 @@
             <h1>js项目<span style = "font-size: x-small; color: grey;">(目前只有一个冒泡排序)</span></h1><br><br><br>
             <a href = "../js_page/" class = "more">点此进入</a>
             <hr style = "margin-bottom: 12px; margin-top: 20px;">
-
+            <div class = "btm-descr">
+                <p>已经到底了</p>
+                <p>更多内容开发中...</p>
+            </div>
         </div>
         <div class="nav">
             <h3 class = "navTitle">导航栏</h3>
