--- a/static/update_log/index.html
+++ b/static/update_log/index.html
@@ -4,6 +4,7 @@
     <meta charset = "UTF-8">
     <link rel = "shortcut icon" href = "../../favicon.ico">
     <link rel = "stylesheet" href = "../../css/base.css">
+    <link rel = "stylesheet" href = "../../css/update_log.css">
     <title>RPeGio's Site</title>
 </head>
 <body>
@@ -12,12 +13,29 @@
     </div>
     <div class="main">
         <div class="content_box" style = "float: none; margin: 60px auto;">
-            <h1>摆大烂.jpg</h1>
+            <hr>
+            <h1>v1.0.1</h1>
+            <br>
+            <p>--优化移动端体验</p>
+            <p>--更新日志模块实装</p>
+            <h4>2023/06/02</h4>
+            <br>
+            <hr>
+            <h1>v1.0.0</h1>
+            <p><br>--添加了更新日志查看<br>--添加了自我介绍<br>--测试了javascript项目预览</p>
+            <h4>2023/08/03</h4>
+            <br><hr>
         </div>
     </div>
-    <div class="footer">
+    <div class = "footer">
         <div class = "contact">联 系 我</div>
-
+        <div class = "platform">
+            <span style = "font-family: icomoon;"><a href = "https://twitter.com/RPeGio_Official" class = "contact_a"></a></span>
+            <span style = "font-family: icomoon;"><a href = "https://youtube.com/404.html" class = "contact_a"></a></span>
+            <span style = "font-family: icomoon;"><a href = "https://github.com/RPeGio/" class = "contact_a"></a></span>
+            <span style = "font-family: icomoon;"><a href = "https://soundcloud.com/tslocsqdsfyk" class = "contact_a"></a></span>
+            <span><a href = "https://space.bilibili.com/430187058"><img src = "../../icon/bilibili.png"></a></span>
+        </div>
     </div>
 </body>
 </html>
