--- a/static/introduce/index.html
+++ b/static/introduce/index.html
@@ -15,9 +15,15 @@
             <h1>摆大烂.jpg</h1>
         </div>
     </div>
-    <div class="footer">
+    <div class = "footer">
         <div class = "contact">联 系 我</div>
-
+        <div class = "platform">
+            <span style = "font-family: icomoon;"><a href = "https://twitter.com/RPeGio_Official" class = "contact_a"></a></span>
+            <span style = "font-family: icomoon;"><a href = "https://youtube.com/404.html" class = "contact_a"></a></span>
+            <span style = "font-family: icomoon;"><a href = "https://github.com/RPeGio/" class = "contact_a"></a></span>
+            <span style = "font-family: icomoon;"><a href = "https://soundcloud.com/tslocsqdsfyk" class = "contact_a"></a></span>
+            <span><a href = "https://space.bilibili.com/430187058"><img src = "../../icon/bilibili.png"></a></span>
+        </div>
     </div>
 </body>
 </html>
