--- a/static/introduce/index.html
+++ b/static/introduce/index.html
@@ -4,7 +4,7 @@
     <meta charset = "UTF-8">
     <link rel = "shortcut icon" href = "../../favicon.ico">
     <link rel = "stylesheet" href = "../../css/base.css">
-    <title>RPeGio's Site</title>
+    <title>RPeGio是谁</title>
 </head>
 <body>
     <div class="top">
