--- a/static/js_page/index.html
+++ b/static/js_page/index.html
@@ -5,7 +5,7 @@
     <link rel = "shortcut icon" href = "../../favicon.ico">
     <link rel = "stylesheet" href = "../../css/base.css">
     <link rel = "stylesheet" href = "#">
-    <title>RPeGio's Site</title>
+    <title>Js测试</title>
 </head>
 <body>
     <div class="top">
