--- a/static/update_log/index.html
+++ b/static/update_log/index.html
@@ -5,7 +5,7 @@
     <link rel = "shortcut icon" href = "../../favicon.ico">
     <link rel = "stylesheet" href = "../../css/base.css">
     <link rel = "stylesheet" href = "../../css/update_log.css">
-    <title>RPeGio's Site</title>
+    <title>更新日志</title>
 </head>
 <body>
     <div class="top">
