--- a/static/update_log/index.html
+++ b/static/update_log/index.html
@@ -31,7 +31,7 @@
         <div class = "contact">联 系 我</div>
         <div class = "platform">
             <span style = "font-family: icomoon;"><a href = "https://twitter.com/RPeGio_Official" class = "contact_a"></a></span>
-            <span style = "font-family: icomoon;"><a href = "https://youtube.com/404.html" class = "contact_a"></a></span>
+            <span style = "font-family: icomoon;"><a href = "https://www.youtube.com/channel/UC_Q_T2DC8lOItdSo-s6ngzA" class = "contact_a"></a></span>
             <span style = "font-family: icomoon;"><a href = "https://github.com/RPeGio/" class = "contact_a"></a></span>
             <span style = "font-family: icomoon;"><a href = "https://soundcloud.com/tslocsqdsfyk" class = "contact_a"></a></span>
             <span><a href = "https://space.bilibili.com/430187058"><img src = "../../icon/bilibili.png"></a></span>
