--- a/static/home/index.html
+++ b/static/home/index.html
@@ -17,8 +17,8 @@
             <div class="tri"></div>
             <div class="codeArea">
                 <p class="codeText "><span style = "color: grey; font-weight: 900; font-style: normal;">|</span>
-                     v1.0.1 <br>--优化移动端体验<br>
-                    &nbsp<span style = "float: right; color: rgba(87, 87, 87, 0.562); background-color: transparent;">2023/08/03</span>
+                     v1.1.0 <br>--"我是谁"模块实装<br>--js demo优化，解决了冒泡排序算法结果错误的问题<br>--修复了若干其他问题<br>
+                    &nbsp<span style = "float: right; color: rgba(87, 87, 87, 0.562); background-color: transparent;">2023/08/22</span>
                 </p>
             </div><br>
             <a href = "../update_log/" class = "more">查看全部</a>
@@ -32,7 +32,7 @@
             <a href = "../introduce/" class = " more" id = "js">了解更多</a>
             <hr style = "margin-bottom: 12px; margin-top: 20px;">
             <br><br><br>
-            <h1>js项目<span style = "font-size: x-small; color: grey;">(目前只有一个冒泡排序)</span></h1><br><br><br>
+            <h1>js demo</h1><br><br><br>
             <a href = "../js_page/" class = "more">点此进入</a>
             <hr style = "margin-bottom: 12px; margin-top: 20px;">
             <div class = "btm-descr">
@@ -61,6 +61,7 @@
             <span style = "font-family: icomoon;"><a href = "https://soundcloud.com/tslocsqdsfyk" class = "contact_a"></a></span>
             <span><a href = "https://space.bilibili.com/430187058"><img src = "../../icon/bilibili.png"></a></span>
         </div>
+        <div class = "cpyrt">&copy;&nbsp;2022-2023 RPeGio,All rights reserved.</div>
     </div>
 </body>
 </html>
