--- a/static/update_log/index.html
+++ b/static/update_log/index.html
@@ -36,6 +36,7 @@
             <span style = "font-family: icomoon;"><a href = "https://soundcloud.com/tslocsqdsfyk" class = "contact_a"></a></span>
             <span><a href = "https://space.bilibili.com/430187058"><img src = "../../icon/bilibili.png"></a></span>
         </div>
+        <div class = "cpyrt">&copy;&nbsp;2022-2023 RPeGio,All rights reserved.</div>
     </div>
 </body>
 </html>
