--- a/static/introduce/index.html
+++ b/static/introduce/index.html
@@ -4,15 +4,74 @@
     <meta charset = "UTF-8">
     <link rel = "shortcut icon" href = "../../favicon.ico">
     <link rel = "stylesheet" href = "../../css/base.css">
-    <title>RPeGio是谁</title>
+    <link rel = "stylesheet" href = "../../css/intro.css">
+    <title>你谁？</title>
 </head>
 <body>
     <div class="top">
         <div class="artfont"><a href="../home/">RPeGio</a></div>
     </div>
     <div class="main">
-        <div class="content_box" style = "float: none; margin: 60px auto;">
-            <h1>摆大烂.jpg</h1>
+        <div class = "content_box">
+            <p style = "color: rgb(198, 198, 198); font-style: italic;">· 最后一次更新于2023/08/22</p>
+            <div class = "para_head">我是<span style = "font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 40px; color: rgb(204, 83, 228);">RPeGio</span>，一个普普通通的广东高二学牲。</div>
+            <h1>关于我的名字</h1>
+            <div class = "textBox">
+                <p>RPeGio是由英文单词Arpeggio经过魔改后诞生的，仍然念作Arpeggio（基本上没几个人能念对我那玩意呜呜呜）</p>
+                <br>
+                <p>起这个名字其实纯属脑子一热，而且刚好也是我作曲中非常常用的一种手法所以就……</p>
+            </div>
+            <h1>一些个人信息</h1>
+            <div class = "textBox">
+                <p>出生地：广东</p>
+                <p>生日：2006-10-03</p>
+                <p>身高：182cm</p>
+                <p>体重：55000000mg</p>
+            </div>
+            <h1>我玩什么</h1>
+            <div class = "textBox">
+                <p>各大音游（Phigros rks16.11,Arcaea ptt12.59,maimai rating13011,偶尔摸几把Malody和Osu！mania，偶尔打打bms，玩过Kalpa，玩过Cytus、Cytus2（意思是现在都不玩了）</p>
+                <p>抽象三巨头中的两个：原神、明日方舟</p>
+                <p>偶尔跟同学开几把codm</p>
+                <p>Master Duel学习中</p>
+                <br>
+                <p>玩的游戏很少，也提不起玩新游戏的兴致（电子yw中）</p>
+            </div>
+            <h1>我会什么</h1>
+            <div class = "textBox">
+                <p>
+                    编曲，从18年开始的。虽然进步异常缓慢，最近也灵感匮乏，属于半退的状态（一年一首demo），线下在学进阶乐理。
+                    主要风格是……好像没有主要风格，啥都做一点，包括但不限于传统Prog House，Club House，Electro House，Tech House，Moonbahcore，Psytrance，Hi-Tech/Psycore等等。
+                    最近对融合爵士感兴趣。
+                </p>
+                <br>
+                <p>
+                    计算机方面的话，主要是Web前端，对所有的编程语言都有兴趣（啥都想学啥都学不精），学了点C++的皮毛。最近在学习数据库、Blender有关知识。
+                </p>
+                <br>
+                <p>写谱，知道一部分音游的非官方制谱器的使用方法（）</p>
+                <br>
+                <p><span style = "text-decoration: line-through;">玩原神</span>。</p>
+            </div>
+            <h1>我的性格特点</h1>
+            <div class = "textBox">
+                <p><span class = "strong_text">孤僻。</span>不喜欢说话。</p>
+                <p>只喜欢一个人待着。</p>
+                <p>不是很喜欢有人在身边陪伴，会多多少少觉得不自然。</p>
+                <p>不是很喜欢各种聚会等等集体活动，<span class = "strong_text">强颜欢笑</span>让我很累。</p>
+                <p>不要问我的理想型或取向，本人现处<span class = "strong_text">无爱</span>状态，并且今后不出意外应该也是，也很清楚恋爱将给我带来的是什么，也很清楚自己没有能力去面对以后出现的一切问题。</p>
+                <p>比较怕事，处于那种没我自己的事绝对不会掺和的类型，但实在遇到不合理或忍不下去的事也不会留情，无论对方身份地位。</p>
+                <p>还是比较乐于助人的，别人遇到我能力范围内的问题我会着力给予帮助。</p>
+                <p>非常在意其他人对自身的看法，<span class = "strong_text">极其敏感</span>但一般不会对外表露出来。</p>
+                <p>反感开地图炮的行为，觉得因为一部分魔怔人以及被一些无脑的节奏带偏而去故意抹黑正常玩家的人是<span class = "strong_text">nt中的nt，彼阳的玩意。</span></p>
+                <p>反感<span class = "strong_text">伸手党</span>，让你遇到问题多问别人是在你实在凭自己的能力没有办法解决的前提下再去问，而不是自己连现成的，摆在你面前的东西都不去了解而来随便骚扰别人。</p>
+                <p>极其讨厌不被信任的感觉，骗你对我<span class = "strong_text">没有任何的好处</span>，我也懒得去欺骗你。</p>
+                <p>表里不一。</p>
+                <p>习惯逃避。</p>
+                <p><span class = "strong_text">怕死。</span></p>
+                <p>时常陷入自我怀疑。</p>
+            </div>
+            <h2 style = "text-align: center;">就这样</h2>
         </div>
     </div>
     <div class = "footer">
@@ -24,6 +83,7 @@
             <span style = "font-family: icomoon;"><a href = "https://soundcloud.com/tslocsqdsfyk" class = "contact_a"></a></span>
             <span><a href = "https://space.bilibili.com/430187058"><img src = "../../icon/bilibili.png"></a></span>
         </div>
+        <div class = "cpyrt">&copy;&nbsp;2022-2023 RPeGio,All rights reserved.</div>
     </div>
 </body>
 </html>
