--- a/static/home/index.html
+++ b/static/home/index.html
@@ -8,15 +8,15 @@
     <title>RPeGio's Site</title>
 </head>
 <body>
-    <div class="top">
-        <div class="artfont"><a href="../home/" title="RPeGio's Site">RPeGio</a></div>
+    <div class = "top">
+        <div class = "artfont"><a href = "../home/" title = "RPeGio's Site">RPeGio</a></div>
     </div>
-    <div class="main">
-        <div class="content_box" id = "updateLog">
+    <div class = "main">
+        <div class = "content_box" id = "updateLog">
             <h1>更新日志</h1>
-            <div class="tri"></div>
-            <div class="codeArea">
-                <p class="codeText "><span style = "color: grey; font-weight: 900; font-style: normal;">|</span>
+            <div class = "tri"></div>
+            <div class = "codeArea">
+                <p class = "codeText"><span style = "color: grey; font-weight: 900; font-style: normal;">|</span>
                      v1.1.0 <br>--"我是谁"模块实装<br>--js demo优化，解决了冒泡排序算法结果错误的问题<br>--修复了若干其他问题<br>
                     &nbsp<span style = "float: right; color: rgba(87, 87, 87, 0.562); background-color: transparent;">2023/08/22</span>
                 </p>
@@ -24,12 +24,12 @@
             <a href = "../update_log/" class = "more">查看全部</a>
             <hr style = "margin-bottom: 12px; margin-top: 20px;" id = "wai">
             <br><br><br>
-            <h1 class="">我是谁</h1>
-            <div class="tri" style = "border-bottom: 12px solid rgb(197, 224, 255);"></div>
-            <div class="txtArea">
-                <p class="codeText" style = "text-indent: 2em;">我是RPeGio，一个普普通通的高二学牲……</p>
+            <h1>我是谁</h1>
+            <div class = "tri" style = "border-bottom: 12px solid rgb(197, 224, 255);"></div>
+            <div class = "txtArea">
+                <p class = "codeText" style = "text-indent: 2em;">我是RPeGio，一个普普通通的高二学牲……</p>
             </div><br>
-            <a href = "../introduce/" class = " more" id = "js">了解更多</a>
+            <a href = "../introduce/" class = "more" id = "js">了解更多</a>
             <hr style = "margin-bottom: 12px; margin-top: 20px;">
             <br><br><br>
             <h1>js demo</h1><br><br><br>
