--- a/static/update_log/index.html
+++ b/static/update_log/index.html
@@ -14,16 +14,23 @@
     <div class="main">
         <div class="content_box" style = "float: none; margin: 60px auto;">
             <hr>
+            <h1>v1.1.0</h1>
+            <br>
+            <p>--"我是谁"模块实装</p>
+            <p>--js demo优化，解决了冒泡排序算法结果错误的问题</p>
+            <p>--修复了若干其他问题</p>
+            <h4>2023/08/22</h4>
+            <hr>
             <h1>v1.0.1</h1>
             <br>
             <p>--优化移动端体验</p>
             <p>--更新日志模块实装</p>
-            <h4>2023/06/02</h4>
+            <h4>2023/08/03</h4>
             <br>
             <hr>
             <h1>v1.0.0</h1>
             <p><br>--添加了更新日志查看<br>--添加了自我介绍<br>--测试了javascript项目预览</p>
-            <h4>2023/08/03</h4>
+            <h4>2023/06/02</h4>
             <br><hr>
         </div>
     </div>
