--- a/static/introduce/index.html
+++ b/static/introduce/index.html
@@ -41,7 +41,12 @@
             <div class = "textBox">
                 <p>
                     编曲，从18年开始的。虽然进步异常缓慢，最近也灵感匮乏，属于半退的状态（一年一首demo），线下在学进阶乐理。
-                    主要风格是……好像没有主要风格，啥都做一点，包括但不限于传统Prog House，Club House，Electro House，Tech House，Moonbahcore，Psytrance，Hi-Tech/Psycore等等。
+                </p>
+                <p>
+                    主要风格是……
+                </p>
+                <p>
+                    好像没有主要风格，啥都做一点，包括但不限于传统Prog House，Club House，Electro House，Tech House，Moonbahcore，Psytrance，Hi-Tech/Psycore等等。
                     最近对融合爵士感兴趣。
                 </p>
                 <br>
@@ -53,21 +58,20 @@
                 <br>
                 <p><span style = "text-decoration: line-through;">玩原神</span>。</p>
             </div>
-            <h1>我的性格特点</h1>
+            <h1>我的性格</h1>
             <div class = "textBox">
                 <p><span class = "strong_text">孤僻。</span>不喜欢说话。</p>
                 <p>只喜欢一个人待着。</p>
                 <p>不是很喜欢有人在身边陪伴，会多多少少觉得不自然。</p>
                 <p>不是很喜欢各种聚会等等集体活动，<span class = "strong_text">强颜欢笑</span>让我很累。</p>
-                <p>不要问我的理想型或取向，本人现处<span class = "strong_text">无爱</span>状态，并且今后不出意外应该也是，也很清楚恋爱将给我带来的是什么，也很清楚自己没有能力去面对以后出现的一切问题。</p>
+                <p>不要问我的理想型或取向，鄙人现在<span class = "strong_text">对任何三次元生物不感兴趣</span></p>
                 <p>比较怕事，处于那种没我自己的事绝对不会掺和的类型，但实在遇到不合理或忍不下去的事也不会留情，无论对方身份地位。</p>
                 <p>还是比较乐于助人的，别人遇到我能力范围内的问题我会着力给予帮助。</p>
-                <p>非常在意其他人对自身的看法，<span class = "strong_text">极其敏感</span>但一般不会对外表露出来。</p>
-                <p>反感开地图炮的行为，觉得因为一部分魔怔人以及被一些无脑的节奏带偏而去故意抹黑正常玩家的人是<span class = "strong_text">nt中的nt，彼阳的玩意。</span></p>
-                <p>反感<span class = "strong_text">伸手党</span>，让你遇到问题多问别人是在你实在凭自己的能力没有办法解决的前提下再去问，而不是自己连现成的，摆在你面前的东西都不去了解而来随便骚扰别人。</p>
-                <p>极其讨厌不被信任的感觉，骗你对我<span class = "strong_text">没有任何的好处</span>，我也懒得去欺骗你。</p>
+                <p>一般被认为是不容易变得感性，但是提及其他人对自身的看法又会<span class = "strong_text">极其敏感，</span>但不会对外表露出来。</p>
+                <p>反感开地图炮，觉得因为一部分魔怔人以及被一些无脑的节奏带偏而去故意抹黑正常玩家的人是<span class = "strong_text">nt中的nt，彼阳的玩意。</span></p>
+                <p>极其讨厌不被信任的感觉，骗你对我<span class = "strong_text">没有任何的好处</span></p>
                 <p>表里不一。</p>
-                <p>习惯逃避。</p>
+                <!-- <p>习惯逃避。</p> -->
                 <p><span class = "strong_text">怕死。</span></p>
                 <p>时常陷入自我怀疑。</p>
             </div>
