--- a/static/home/index.html
+++ b/static/home/index.html
@@ -46,7 +46,7 @@
             <div class="ul"><ul class = "navList">
                 <li><a href="#updateLog">更新日志</a></li><hr>
                 <li><a href="#wai">我是谁</a></li><hr>
-                <li><a href="#js">javascript项目</a></li><hr>
+                <li><a href="#js">javascript demo</a></li><hr>
                 <li><a href="#"></a></li><hr>
                 <li><a href="#"></a></li><hr>
             </ul></div>
