--- a/index.html
+++ b/index.html
@@ -3,19 +3,15 @@
 <head>
     <meta charset = "UTF-8">
     <meta language = "zh-CN">
-    <title>即将进入RPeGio的主页</title>
+    <title>网站暂未开放</title>
     <link rel = "stylesheet" href = "css/index.css">
 </head>
 <body>
     <div>
-        <h1>即将进入RPeGio的个人主页</h1>
-        <p>此页面仅作测试作用，RPeGio正在不断学习网页开发中，以后将会不断更新其中的内容。</p>
-        <br><br><br>
-        <h6>点击下方按钮进入首页</h6>
+        <h1>重构中……</h1>
+        <p>原网站已停止维护，不再对外开放，但其中一些功能仍能够正常使用</p>
+        <p>更新、更美观、功能更齐全的个人页面即将到来……</p>
         <br>
-    </div>
-    <div class = "button">
-        <a href = "static/home/">进入首页</a>
     </div>
 </body>
 </html>
